# linux-inotify

./: .gitignore  CHANGES.md  LICENSE  README.md  linux-inotify.cabal
src/System/Linux/: Inotify.hsc
test/: test.hs
