name:                linux-inotify
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Leon P Smith
maintainer:          leon@melding-monads.com
copyright:           (c) 2013-2014 Leon P Smith
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     System.Linux.Inotify
  -- other-modules:
  build-depends:       base, unix, bytestring

  ghc-options: -Wall -O
